Rework on folder architecture

--- a/src/components/hud/refreshButton/styles.css
+++ b/src/components/hud/refreshButton/styles.css
@@ -3,7 +3,7 @@
   height: 34%;
   bottom: 3.7%;
   left: 1%;
-  background: url("../../assets/images/hud_refresh-button.png");
+  background: url("../../../assets/images/hud_refresh-button.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
