--- a/src/components/hud/xpButton/styles.css
+++ b/src/components/hud/xpButton/styles.css
@@ -3,7 +3,7 @@
   height: 34%;
   top: 26%;
   left: 1%;
-  background: url("../../assets/images/hud_xp-button.png");
+  background: url("../../../assets/images/hud_xp-button.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
