--- a/src/components/hud/championInRoll/styles.css
+++ b/src/components/hud/championInRoll/styles.css
@@ -10,6 +10,23 @@
   margin-right: 0;
 }
 
-#champions-roll > li.five-cost {
+#champions-roll > li:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 10;
+}
+#champions-roll > li.five-cost:before {
   background-image: url("../../../assets/images/hud_champion-5.png");
+}
+
+#champions-roll > li > img {
+  height: 77%;
+  top: 3%;
+  left: 50%;
+  transform: translateX(-50%);
 }
